--- a/ticket/message.twig
+++ b/ticket/message.twig
@@ -9,7 +9,11 @@
 					{{ message.user.formatted_name }}
 				</span>
 				{% if not message.attachments.isEmpty() %}
-					<span class="sp-attachment sp-description">&nbsp; <i class="fas fa-paperclip"></i></span>
+					<span class="sp-attachment sp-description" style="color: #9ca3af; font-size: 0.875rem;">&nbsp;
+						<svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="display: inline-block; vertical-align: middle;">
+							<path d="m21.44 11.05-9.19 9.19a6 6 0 0 1-8.49-8.49l9.19-9.19a4 4 0 0 1 5.66 5.66l-9.2 9.19a2 2 0 0 1-2.83-2.83l8.49-8.48"/>
+						</svg>
+					</span>
 				{% endif %}
 				<div class="sp-description">{{ timeago(message.created_at) }}</div>
 			</div>
@@ -36,8 +40,12 @@
 					<h4 class="sp-m-0">{{ Lang.choice('general.attachment', 2) }}</h4>
 				</div>
 				<div class="sp-flex-initial">
-					<button class="sp-download-all as-link" style="display: none;" title="{{ Lang.get('general.download_all') }}">
-						<i class="fas fa-download sp-text-secondary hover:sp-text-primary"></i>
+					<button class="sp-download-all as-link" style="display: none; background: none; border: none; color: #9ca3af; cursor: pointer; padding: 0.5rem; border-radius: 0.25rem; transition: color 0.2s;" title="{{ Lang.get('general.download_all') }}">
+						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+							<path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/>
+							<polyline points="7 10 12 15 17 10"/>
+							<line x1="12" x2="12" y1="15" y2="3"/>
+						</svg>
 					</button>
 				</div>
 			</div>
